--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -26,5 +26,7 @@ jobs:
         flutter-version: '3.0.5'
     - run: flutter pub get
     - run: flutter test
+    - run: flutter analyze
+    - run: flutter format lib
     - run: flutter build apk
     - run: flutter build appbundle
