--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -24,6 +24,14 @@ jobs:
     - uses: subosito/flutter-action@v2
       with:
         flutter-version: '3.0.5'
+
+    - name: Patch for linux build
+      run: |
+        flutter doctor
+        sudo apt-get update -y
+        sudo apt-get install -y ninja-build libgtk-3-dev
+        flutter doctor
+
     - run: flutter pub get
     - run: flutter test
     - run: flutter test integration_test -d linux
