--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,9 +12,9 @@ on:
     branches: [ "stable" ]
 
 jobs:
-  build:
+  apk:
+    name: Generate APK
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v3
     - uses: actions/setup-java@v2
@@ -35,13 +35,13 @@ jobs:
         
   release:
     name: Release APK
-    needs: build
+    needs: apk
     runs-on: ubuntu-latest
     steps:
       - name: Download APK from build
         uses: actions/download-artifact@v1
         with:
-          name: build
+          name: apk
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
