--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,8 +30,8 @@ jobs:
     - run: flutter build appbundle
     - uses: actions/upload-artifact@v1
       with:
-        name: release-apk
-        path: build/app/outputs/apk/release/app-release.apk
+        name: apk
+        path: app/build/outputs/apk/debug/app-debug.apk
         
   release:
     name: Release APK
