ci(lint): fix format command
Was still using flutter format instead of dart format.

--- a/.github/workflows/code_analysis.yml
+++ b/.github/workflows/code_analysis.yml
@@ -25,4 +25,4 @@ jobs:
       with:
         flutter-version: '3.13.9'
     - run: flutter analyze
-    - run: flutter format lib
+    - run: dart format lib
