--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   firedart: ^0.9.0+1
   provider: ^6.0.3
+  firebase_core: ^2.22.0
+  cloud_firestore: ^4.13.0
 
 dev_dependencies:
   flutter_test:
