--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,8 +38,11 @@ dependencies:
   provider: ^6.0.3
   firebase_core: ^2.22.0
   cloud_firestore: ^4.13.0
+  firebase_auth: ^4.13.0
+  http: ^1.1.0
 
 dev_dependencies:
+  build_runner: ^2.4.6
   flutter_test:
     sdk: flutter
   integration_test:
@@ -47,6 +50,7 @@ dev_dependencies:
 
 
   lint: ^1.0.0
+  mockito: ^5.4.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
