--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,12 +34,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  firedart: ^0.9.0+1
   provider: ^6.0.3
   firebase_core: ^2.22.0
   cloud_firestore: ^4.13.0
   firebase_auth: ^4.13.0
   http: ^1.1.0
+  logger: ^2.0.2+1
 
 dev_dependencies:
   build_runner: ^2.4.6
