--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   cloud_firestore: ^4.13.0
   firebase_auth: ^4.13.0
   http: ^1.1.0
-  logger: ^2.0.2+1
+  logging: ^1.2.0
 
 dev_dependencies:
   build_runner: ^2.4.6
