--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   firebase_auth: ^4.13.0
   http: ^1.1.0
   logging: ^1.2.0
+  get_it: ^7.6.4
 
 dev_dependencies:
   build_runner: ^2.4.6
