--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dev_dependencies:
   build_runner: ^2.4.6
   flutter_test:
     sdk: flutter
+  husky: ^0.1.7
   integration_test:
     sdk: flutter
 
