--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   logging: ^1.2.0
   get_it: ^7.6.4
   mockito: ^5.4.2
+  rxdart: ^0.27.7
 
 dev_dependencies:
   build_runner: ^2.4.6
