--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,8 +41,8 @@ dependencies:
   http: ^1.1.0
   logging: ^1.2.0
   get_it: ^7.6.4
-  mockito: ^5.4.2
   rxdart: ^0.27.7
+  mocktail: ^1.0.3
 
 dev_dependencies:
   build_runner: ^2.4.6
