--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,8 +66,8 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
-    #  assets:
-    #    - .env
+  assets:
+    - .env
 
     # An image asset can refer to one or more resolution-specific "variants", see
     # https://flutter.dev/assets-and-images/#resolution-aware
