--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,6 @@ dependencies:
   get_it: ^7.6.4
   rxdart: ^0.27.7
   mocktail: ^1.0.3
-  flutter_dotenv: ^5.1.0
 
 dev_dependencies:
   build_runner: ^2.4.6
@@ -66,8 +65,8 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
-  assets:
-    - .env
+    #  assets:
+    #    - .env
 
     # An image asset can refer to one or more resolution-specific "variants", see
     # https://flutter.dev/assets-and-images/#resolution-aware
@@ -87,8 +86,8 @@ flutter:
     #       - asset: fonts/Schyler-Italic.ttf
     #         style: italic
     #   - family: Trajan Pro
-    #     fonts:
-    #       - asset: fonts/TrajanPro.ttf
+  #     fonts:
+  #       - asset: fonts/TrajanPro.ttf
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
   #
