--- a/.github/workflows/flutter_tests.yml
+++ b/.github/workflows/flutter_tests.yml
@@ -38,7 +38,4 @@ jobs:
         run: |
           export DISPLAY=:99
           sudo Xvfb -ac :99 -screen 0 1280x1024x24 > /dev/null 2>&1 &
-          flutter test -d linux integration_test/regression.dart --dart-define=TEST_USER_EMAIL=${{ secrets.TEST_USER_EMAIL }} --dart-define=TEST_USER_PASSWORD=${{ secrets.TEST_USER_PASSWORD }}
-
-
-        
+          flutter test -d linux integration_test/regression.dart
